// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SSection renders correctly 1`] = `
<div
  className="container-fluid"
>
  
</div>
`;

exports[`SSection renders correctly with activities 1`] = `
<div
  className="container-fluid"
>
  <div
    className="show-grid row"
    style={
      Object {
        "backgroundColor": "white",
      }
    }
  >
    <div
      className="slideanim col-md-4"
    >
      <img
        className="img-circle"
        src="https://drive.google.com/uc?id=0BwBkl30bqN8KQnc3U1hRM1o2MWs"
        style={
          Object {
            "boxShadow": "0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)",
          }
        }
      />
      <h3>
        Da de comer a los ponys
      </h3>
      <p>
        Los caballos y los ponys son animales muy sociables, detectan nuestras emociones y son muy curiosos, además ¡les encantan las frutisinas!
      </p>
    </div>
    <div
      className="slideanim col-md-4"
    >
      <img
        className="img-circle"
        src="https://drive.google.com/uc?id=0BwBkl30bqN8KRXVPX0RMakNiajA"
        style={
          Object {
            "boxShadow": "0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)",
          }
        }
      />
      <h3>
        Conoce nuestro día a día
      </h3>
      <p>
        Una escuela de equitación tiene muchas actividades, desde hacer las camas, la comida o salir a jugar ¡igual que en casa!
      </p>
    </div>
  </div>
</div>
`;

exports[`SSection renders correctly with only titled activities 1`] = `
<div
  className="container-fluid"
>
  <div
    className="show-grid row"
    style={
      Object {
        "backgroundColor": "white",
      }
    }
  >
    <div
      className="slideanim col-md-4"
    >
      
      <h3>
        Da de comer a los ponys
      </h3>
      <p />
    </div>
    <div
      className="slideanim col-md-4"
    >
      
      <h3>
        Conoce nuestro día a día
      </h3>
      <p />
    </div>
  </div>
</div>
`;
